--- a/Moccie/Web.config
+++ b/Moccie/Web.config
@@ -7,6 +7,10 @@
 
 <configuration>
 
+    <connectionStrings>
+        <add name="MoccieDBConnectionString" connectionString="Data Source=moccie.database.windows.net;Initial Catalog=MoccieDB;Persist Security Info=True;User ID=nthom5109;Password=Cowie123!"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <system.web>
       <compilation debug="true" targetFramework="4.6.1"/>
       <httpRuntime targetFramework="4.6.1"/>
