Kontakt side send email virker, skal laves rettes til når den bliver sat online!

--- a/Moccie/Web.config
+++ b/Moccie/Web.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <!--
-  For more information on how to configure your ASP.NET application, please visit
+  For more information on how to configure your ASP.NET application, please visit 
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 
@@ -26,4 +26,11 @@
         </compilers>
     </system.codedom>
 
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="SpecifiedPickupDirectory">
+        <specifiedPickupDirectory pickupDirectoryLocation="C:\Users\Thomas\Desktop\Mails\"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
