--- a/Moccie/Web.config
+++ b/Moccie/Web.config
@@ -14,6 +14,7 @@
     <system.web>
       <compilation debug="true" targetFramework="4.6.1"/>
       <httpRuntime targetFramework="4.6.1"/>
+      <sessionState timeout="2000"></sessionState>
     </system.web>
     <system.codedom>
         <compilers>
