--- a/Moccie/Web.config
+++ b/Moccie/Web.config
@@ -32,11 +32,15 @@
         </compilers>
     </system.codedom>
 
-  <system.net>
+  <!--<system.net>
     <mailSettings>
-      <smtp deliveryMethod="SpecifiedPickupDirectory">
-        <specifiedPickupDirectory pickupDirectoryLocation="C:\Users\Thomas\Desktop\Mails\"/>
+      <smtp>
+        <network
+             host="mail.unoeuro.com"
+             port="25"
+             userName="tomis@tomis.dk"
+             password="Cowie312!" />
       </smtp>
     </mailSettings>
-  </system.net>
+  </system.net>-->
 </configuration>
